@@ -1,3 +1,15 @@
+2011-06-17  Andrey Adaikin  <aandrey@google.com>
+
+        Reviewed by Pavel Feldman.
+
+        Web Inspector: Source code which includes non-Latin character does not correspond to line number field on Inspector
+        https://bugs.webkit.org/show_bug.cgi?id=62845
+
+        * inspector/front-end/TextViewer.js:
+        (WebInspector.TextViewer.prototype._syncLineHeight):
+        (WebInspector.TextEditorGutterPanel):
+        (WebInspector.TextEditorGutterChunk.prototype.set expanded):
+
 2011-06-16  Yury Semikhatsky  <yurys@chromium.org>
 
         Reviewed by Pavel Feldman.
